# in-class-code

./: FileReadingAndStringManip.sln  FileReadingAndStringManip.vcxproj  files_and_strings.cpp  main.cpp  study-guide.md  test.txt
cpp_review/: FileReadingAndStringManip.vcxproj.filters  allocators.cpp  files_and_strings.cpp  main.cpp
cpp_review/Debug/: FileReadingAndStringManip.exe.recipe  FileReadingAndStringManip.ilk  FileReadingAndStringManip.vcxproj.FileListAbsolute.txt  vc143.idb
cpp_review/Debug/FileRead.c54a15c9.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  FileReadingAndStringManip.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
cpp_review/x64/Debug/: FileReadingAndStringManip.exe.recipe  FileReadingAndStringManip.ilk  FileReadingAndStringManip.vcxproj.FileListAbsolute.txt  vc143.idb
cpp_review/x64/Debug/FileRead.c54a15c9.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  FileReadingAndStringManip.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
lecture-notes/: udp-notes.md
sec-1/cpp_review/: FileReadingAndStringManip.vcxproj  allocators.cpp  test.txt
sec-1/sockets/: Makefile  README.md  allocators.cpp  defer.h  main.cpp  pool.h  socklib.h  socklib_generic.cpp  socklib_posix.cpp  socklib_win32.cpp
sec-2/cpp_review/: main.cpp
sec-2/sockets/: main.cpp  socklib.h  socklib_generic.cpp  socklib_posix.cpp  socklib_win32.cpp  strlcpy.cpp  udp_client.h
sockets/: .gitignore  CMakeLists.txt  allocators.h  main.cpp  pool.cpp  socklib.h
(+1 files in other folders)
